# play-watch-read-backlog-manager

./: .gitignore  README.md  pyproject.toml
src/pwrblm/: __init__.py  cli.py  editor.py  interface.py  lister.py  manager.py  util.py
src/pwrblm/book/: __init__.py  cli.py  edit.py  filter.py  models.py
src/pwrblm/filters/: __init__.py  base.py
src/pwrblm/game/: __init__.py  cli.py  edit.py  filter.py  models.py  sorter.py
src/pwrblm/picker/: __init__.py  model.py
src/pwrblm/resources/: __init__.py
src/pwrblm/resources/schema/: __init__.py  book.schema.yaml  game.schema.yaml
